<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_4_dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="@string/hint_book_name" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_4_dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            tools:text="@string/hint_book_price" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_4_dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            tools:text="quantity" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/sell_button"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:focusable="false"
        android:src="@mipmap/ic_sell_icon"
        android:text="@string/sale" />
</LinearLayout>
